--- a/src/pages/tabs/style.css
+++ b/src/pages/tabs/style.css
@@ -1,5 +1,5 @@
 .bg-sc {
-    --background: url('../src/imgs/sc-bg.png') no-repeat center center fixed;
+    --background: url('../../imgs/sc-bg.png') no-repeat center center fixed;
     background: var(--background); 
     background-size: cover;
 }
