--- a/src/pages/tabs/style.css
+++ b/src/pages/tabs/style.css
@@ -3,3 +3,26 @@
     background: var(--background); 
     background-size: cover;
 }
+  
+  .simple-keyboard {
+    background-color: #111111;
+    max-width: 850px;
+    max-height: 550px;
+    color: black;
+
+  }
+
+  .simple-keyboard.hg-theme-default.myTheme {
+    margin: 10px;
+    width: calc(100% - 20px);
+  }
+  
+  .simple-keyboard.hg-layout-default .hg-button.hg-red {
+    background: rgb(255, 0, 0, 0.7);
+    color: white;
+  }
+  
+  .simple-keyboard.hg-layout-default .hg-button.hg-highlight {
+    box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.5);
+    z-index: 1;
+  }
