--- a/src/assets/css/keyboard.css
+++ b/src/assets/css/keyboard.css
@@ -1,6 +1,25 @@
-
+input {
+  width: 90%;
+  height: 100px;
+  padding: 20px;
+  font-size: 20px;
+  border: none;
+  box-sizing: border-box;  
+  border-radius: 10px;
+}
 
 .simple-keyboard {
+  max-width: 1200px;
+  color: black;
+}
+
+button {
+  margin-top: 10px;
+ 
+}
+
+
+/* .simple-keyboard {
   background-color: #111111;
   max-width: 850px;
   max-height: 550px;
@@ -8,19 +27,32 @@
   z-index: 9999;
   border-radius: 20px;
   padding: 20px;
-}
+} */
 
-.simple-keyboard.hg-theme-default.myTheme {
+/* .simple-keyboard.hg-theme-default.myTheme {
   margin: 10px;
   width: calc(100% - 20px);
-}
+} */
 
-.simple-keyboard.hg-layout-default .hg-button.hg-red {
+/* .simple-keyboard.hg-layout-default .hg-button.hg-red {
   background: rgb(255, 0, 0, 0.7);
   color: white;
-}
+} */
 
-.simple-keyboard.hg-layout-default .hg-button.hg-highlight {
+/* .simple-keyboard.hg-layout-default .hg-button.hg-highlight {
   box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.5);
   z-index: 1;
-}
+} */
+
+/* input {
+  width: 100%;
+  height: 100px;
+  padding: 20px;
+  font-size: 20px;
+  border: none;
+  box-sizing: border-box;
+} */
+
+/* .simple-keyboard {
+  max-width: 850px;
+} */
