Squashed commit of the following:
commit 75f97757d0c7eff46ad01e01c1106936d9d3d07e
Author: Mike Gester <103890491+r-mikegester@users.noreply.github.com>
Date:   Sat Feb 24 23:29:51 2024 +0800

    Delete .gitattributes

commit f70de3119341fbabdf20279bcbfcb9e90f92ee51
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 14:33:14 2024 +0800

    trying to removed glbs to fix error

commit c7cf3d4dfa7907de6ff305021a425d9cd11ee1db
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 14:24:02 2024 +0800

    renamed glbs

commit 175ea0c592b7690636852da709ae231cf4d0a707
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 14:17:02 2024 +0800

    change the location of sb_final2

commit 12196bb09617ec6c02edc664c800d1e221023eda
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 13:31:42 2024 +0800

    added glbs and imports of it

commit 91350bfe967d077df04104ea43fe8aefa02538c8
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 13:31:19 2024 +0800

    temporarily removed glbs and imports of it

commit 7559d08f0761e9e06511c9b5452cdde7f202d892
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 13:23:19 2024 +0800

    added clouds again

commit 70e4223ebf21f61a37d941971186673c5928d83b
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 13:22:46 2024 +0800

    temporarily removed clouds

commit 27d4e8df6501a0fc532d635d66edb298ba98386d
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 13:16:07 2024 +0800

    removed unnecesary glbs

commit ba4278b2bb72b9ebbece841538aea3fa6495053d
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 11:54:33 2024 +0800

    remove individual declaration

commit 4297edc4b2da1520e6805efe43126234f720e3c5
Author: Mike Gester <mikegester.sabuga023@gmail.com>
Date:   Wed Feb 21 11:21:09 2024 +0800

    removed temporarily the declaration of modelpaths

commit 44993b9eac

--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -22,14 +22,14 @@
 
   .sidebar-tooltip {
     @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md
-     bg-base-300 
+     bg-gradient-to-tr from-accent to-base-300 
     text-xs font-bold 
     transition-all duration-100 scale-0 origin-left;
   }
 
   .sidebar-hr {
-    @apply border border-base-300 bg-base-300 rounded-full
-    mx-auto w-2;
+    @apply border border-base-300 bg-accent rounded-full
+    mx-auto w-10 ;
   }
 }
 
